--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==2.0.4
 cytoolz==0.11.0
 Django==3.2.7
 django-crispy-forms==1.12.0
+django-filter==2.4.0
 djangorestframework==3.12.4
 eth-abi==2.1.1
 eth-account==0.5.5
@@ -34,6 +35,7 @@ protobuf==3.17.3
 pycryptodome==3.10.1
 pyrsistent==0.18.0
 pytz==2021.1
+pywin32==301
 redis==3.5.3
 requests==2.26.0
 rlp==2.0.1
