--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ chardet==4.0.0
 charset-normalizer==2.0.4
 cytoolz==0.11.0
 Django==3.2.7
+django-background-tasks==1.2.5
+django-compat==1.0.15
 django-crispy-forms==1.12.0
 django-filter==2.4.0
 djangorestframework==3.12.4
@@ -35,6 +37,7 @@ protobuf==3.17.3
 pycryptodome==3.10.1
 pyrsistent==0.18.0
 pytz==2021.1
+pywin32==301
 redis==3.5.3
 requests==2.26.0
 rlp==2.0.1
